--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ material/
 face_recognition/__MACOSX
 face_recognition/.ipynb_checkpoints
 face_recognition/yalefaces
+face_recognition/lbph_classifier.yml
