CNN classification is done.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,16 @@ face_recognition/__MACOSX
 face_recognition/.ipynb_checkpoints
 face_recognition/yalefaces
 face_recognition/lbph_classifier.yml
-image_classification/cat_dog_1/
-image_classification/homer_bart_1/
-image_classification/weights1.hdf5
-image_classification/weights2.hdf5
+DNN_image_classification/cat_dog_1/
+DNN_image_classification/homer_bart_1/
+DNN_image_classification/weights1.hdf5
+DNN_image_classification/weights2.hdf5
+CNN_image_classification/homer_bart_2/
+CNN_image_classification/network.json
+CNN_image_classification/weights.hdf5
+DNN_image_classification/.ipynb_checkpoints/features-checkpoint.csv
+DNN_image_classification/.ipynb_checkpoints/network1-checkpoint.json
+DNN_image_classification/features.csv
+DNN_image_classification/network1.json
+DNN_image_classification/network2.json
+CNN_image_classification/cat_dog_2/
