emotion classification is done

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ DNN_image_classification/network2.json
 CNN_image_classification/cat_dog_2/
 transfer_learning_&_fine_tuning/cat_dog_2
 transfer_learning_&_fine_tuning/homer_bart_2
+emotion_classification/emotion_test01_result.avi
+emotion_classification/fer2013/
+emotion_classification/hello.png
